--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Message Whatsapp</title>
 
-    <base href="/" />
+    <base href="https://alhilali.github.io/whatsapp-util/" />
 
     <meta
       name="viewport"
