--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Message Whatsapp</title>
 
     <base href="https://alhilali.github.io/whatsapp-util/" />
+    <script>document.write('<base href="' + document.location + '" />');</script>
 
     <meta
       name="viewport"
